fixed category nav spacing

--- a/resources/assets/sass/_bootstrap-additions.scss
+++ b/resources/assets/sass/_bootstrap-additions.scss
@@ -191,7 +191,3 @@ label {
     text-align: right;
   }
 }
-
-.list-group-with-tabs {
-  margin-top: -1px;
-}
